<resources>
    <string name="app_name">Assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="contentButtonPushMe">Push me</string>
    <string name="contentButtonClickMe">Click me</string>
    <string name="contentLargeTextThisIsATest">This is a Test</string>
    <string name="textViewScore">Score:</string>
    <string name="textViewActualScore">0</string>
</resources>
