<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:id="@+id/relLayout"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contentButtonPushMe"
        android:id="@+id/contentButtonPushMe"
        android:layout_marginTop="118dp"
        android:layout_below="@+id/contentLargeTextThisIsATest"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contentButtonClickMe"
        android:id="@+id/contentButtonClickMe"
        android:layout_alignTop="@+id/contentButtonPushMe"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contentLargeTextThisIsATest"
        android:id="@+id/contentLargeTextThisIsATest"
        android:layout_marginTop="114dp"
        android:textSize="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:enabled="false"
        android:textSize="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewScore"
        android:id="@+id/textViewScore"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/contentButtonPushMe"
        android:layout_toStartOf="@+id/chronometer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewActualScore"
        android:id="@+id/textViewActualScore"
        android:layout_alignTop="@+id/textViewScore"
        android:layout_toStartOf="@+id/contentButtonClickMe" />
</RelativeLayout>
